--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@ body {
 .navbar {
   float:right;
   margin: 20px;
+  font-family: arial,sans-serif;
 }
 
 .nav-item{
   text-decoration: none;
   color: black;
   margin: right 15px;
+  padding-right: 15px;
 }
 
 .nav-item:hover {
