--- a/style.css
+++ b/style.css
@@ -1,5 +1,24 @@
 body {
   display: contents;
+  font-size: 14px;
+    font-family: Apple SD Gothic
+}
+
+.navbar-left{
+  float:left;
+  margin: 20px;
+  font-family: arial,sans-serif;
+}
+
+.nav-left-item{
+  text-decoration: none;
+  color: #202124;
+  margin: right 15px;
+  padding-right: 15px;
+}
+
+.nav-left-item:hover{
+  text-decoration: underline;
 }
 
 .navbar {
@@ -10,7 +29,7 @@ body {
 
 .nav-item{
   text-decoration: none;
-  color: black;
+  color: #202124;
   margin: right 15px;
   padding-right: 15px;
 }
@@ -68,20 +87,6 @@ body {
     background-color: #f8f9fa;
     border: 1px solid #dadce0;
     color: #202124;
-}
-
-.language-area{
-  margin-top: 18px;
-}
-
-.language{
-  text-decoration: none;
-  padding: 0 3px;
-  color: #1a0dab;
-}
-
-.language:hover{
-  text-decoration: underline;
 }
 
 .footer{
