--- a/style.css
+++ b/style.css
@@ -56,6 +56,14 @@ body {
   padding-right: 40px;
 }
 
+.input-box:hover{
+  box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+    background-color: #f8f9fa;
+    border: 1px solid #dadce0;
+    color: #202124;
+}
+
+
 .search-icon{
   position: relative;
   left: 40px;
