--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
   padding-right: 40px;
 }
 
-.input-box:hover{
+.input-area:hover {
   box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
     background-color: #f8f9fa;
     border: 1px solid #dadce0;
